# hexkit

./: .gitignore  CONTRACT.md  IMPROVEMENTS.md  Makefile  QUICKSTART.md  README.md  TODO.md  demo-users.yaml  ruff.toml  specs.md
.github/workflows/: ci.yml
backend-runtime/: README.md  pyproject.toml  pytest.ini
backend-runtime/examples/: README.md
backend-runtime/tests/: conftest.py  test_actions.py  test_aliases.py  test_cancel.py  test_events.py  test_isolation.py  test_manifest.py  test_openai_agents.py  test_registry.py  test_server.py  test_translators.py
custom-UI/: README.md  package-lock.json  package.json  specs.md  tailwind.preset.cjs  tsconfig.build.json  tsconfig.json  vite.config.ts
custom-UI/docs/: README.md  extending.md  getting-started.md  widgets.md  yaml-reference.md
demo/: CONTRACT.md  HANDOFF.md  specs.md
demo/agent-server/: .env.sample  pyproject.toml
demo/agent-server/src/agent_server/: __init__.py  __main__.py  actions.py  base.py  config.py  memory.py  protocol.py  roster.py  select.py  tools.py
demo/agent-server/src/agent_server/agents/: adk_llm.py  base.py  demos.py  devops.py  devops_agent.py  devops_state.py  echo.py  google_adk.py  healthcare.py  healthcare_agent.py  hr.py  hr_agent.py  hr_state.py  itsm.py  itsm_agent.py  itsm_db.py  llm.py  openai_agents.py  select.py
demo/agent-server/src/agent_server/agents/clinic_org/healthcare/: healthcare.py  healthcare_agent.py
demo/agent-server/src/agent_server/agents/shared/hr/: hr.py  hr_agent.py
demo/agent-server/src/agent_server/agents/tech_org/devops/: devops.py  devops_agent.py  ui.yaml
demo/agent-server/src/agent_server/agents/tech_org/itsm/: itsm.py  itsm_agent.py  itsm_db.py
demo/agent-server/src/agent_server/frameworks/: langchain_events.py  openai_agents.py
demo/agent-server/src/agent_server/routes/: agents.py
demo/agent-server/src/agent_server/server/: app.py
demo/agent-server/src/agent_server/ui/: atlas.yaml  devops.yaml  forge.yaml  healthcare.yaml  hr.yaml  itsm.yaml  orbit.yaml  probe.yaml
demo/agent-server/tests/: test_agents_route.py  test_assistant_text.py  test_memory.py
demo/gdocs-agent/: README.md  demo-users.yaml  pyproject.toml
demo/gdocs-agent/src/gdocs_agent/: __init__.py  __main__.py  agent.py  app.py  gdocs_mcp_server.py
demo/gdocs-agent/src/gdocs_agent/ui/: docs.yaml
demo/hexa-gate-agent/: README.md  pyproject.toml
demo/hexa-gate-agent/src/hexa_gate_agent/: __init__.py  __main__.py  agent.py  app.py
demo/hexa-gate-agent/src/hexa_gate_agent/ui/: guard.yaml
demo/proxy/: .env.example  alembic.ini  pyproject.toml  pytest.ini
demo/proxy/alembic/: env.py
demo/proxy/alembic/versions/: 0001_users.py  0002_folders_conversations_messages.py
demo/proxy/src/platform_backend/: __main__.py  config.py  db.py  runtime_client.py  sse.py
demo/proxy/src/platform_backend/auth/: deps.py  implicit_user.py  jwt.py  passwords.py
demo/proxy/src/platform_backend/crypto/: fernet.py
demo/proxy/src/platform_backend/models/: api_key.py  conversation.py  conversation_file.py  file.py  folder.py  user.py
demo/proxy/src/platform_backend/routes/: auth.py  chat.py  conversations.py  files.py  folders.py  me.py  me_keys.py  proxy.py
demo/proxy/src/platform_backend/schemas/: api_key.py  auth.py  chat.py  conversation.py  file.py  message.py
demo/proxy/src/platform_backend/server/: app.py
demo/proxy/src/platform_backend/translators/: __init__.py  base.py  fortify.py  google_adk.py  hexgate.py  langchain.py  native.py  openai_agents.py
demo/proxy/tests/: _helpers.py  conftest.py  test_auth.py  test_auth_required.py  test_chat.py  test_conversations.py  test_dev_seed.py  test_isolation.py  test_jwt.py  test_me.py  test_me_keys.py  test_messages.py  test_passwords.py  test_proxy.py
demo/starter-agent/: pyproject.toml
demo/starter-agent/src/starter_agent/: app.py
docs/: README.md  extending.md  getting-started.md  widgets.md  yaml-reference.md
front-app/: README.md  index.html  package-lock.json  package.json  specs.md  vite.config.ts
legacy/: TODO.md  specs.md
legacy/backend-runtime/: pyproject.toml  pytest.ini
legacy/backend-runtime/examples/google_adk_hello/: agent.py  agent.yaml
legacy/backend-runtime/examples/langchain_hello/: agent.py
legacy/backend-runtime/examples/langgraph_hello/: actions.py  agent.yaml  ui.yaml
legacy/backend-runtime/examples/openai_agents_hello/: agent.py
legacy/backend-runtime/src/platform_runtime/: __init__.py  events.py  ipc.py  protocol.py  run_emitter.py
legacy/backend-runtime/src/platform_runtime/adapters/: credentials_cache.py  google_adk_adapter.py  langchain_adapter.py  openai_agents_adapter.py
legacy/backend-runtime/src/platform_runtime/server/: __init__.py  app.py
legacy/backend-runtime/tests/: conftest.py  test_approvals.py  test_approvals_subprocess.py  test_cancel.py  test_credentials_cache.py  test_credentials_passthrough.py  test_events.py  test_google_adk.py  test_multifile.py  test_registry.py  test_server.py  test_venv.py
proxy-server/: .env.example  docker-compose.yml  pyproject.toml
proxy-server/alembic/: env.py
proxy-server/alembic/versions/: 0003_api_keys.py  0004_user_name_and_role.py  0005_files_and_conversation_context.py  0006_drop_api_keys.py  0007_user_agents.py
proxy-server/src/platform_backend/: access.py  config.py  runtime_client.py
proxy-server/src/platform_backend/auth/: demo_users.py
proxy-server/src/platform_backend/models/: __init__.py  conversation_context.py  message.py  user.py
proxy-server/src/platform_backend/routes/: chat.py  conversations.py  me.py  proxy.py
proxy-server/src/platform_backend/schemas/: auth.py  chat.py  context.py  file.py  folder.py
proxy-server/src/platform_backend/server/: app.py
proxy-server/src/platform_backend/translators/: __init__.py  base.py  google_adk.py  native.py  openai_agents.py
proxy-server/tests/: conftest.py  test_auth_required.py  test_chat.py  test_conversations.py  test_demo_users.py  test_folders.py  test_me.py  test_me_update.py  test_proxy.py
src/: index.ts  styles.css
src/schema/: page.ts
(+223 files in other folders)
