[project]
name = "hexkit-proxy"
version = "0.1.0"
description = "HexKit platform backend — single-user proxy: conversations, files, and per-framework SSE translation (import package stays `platform_backend`)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",         # default store: a single SQLite file, no server to deploy
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6",
    "hexa-events",
]

[project.optional-dependencies]
# Postgres is optional — install this extra and set a postgresql+asyncpg:// URL
# to scale past SQLite's single-writer limit (multi-worker / high concurrency).
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.uv.sources]
hexa-events = { path = "../packages/hexa-events", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_backend"]

# Ruff config is shared at the repo root (HexKit/ruff.toml).
