[project]
name = "agent-server"
version = "0.1.0"
description = "Reference developer backend for the HexKit streaming contract"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",      # load secrets from the agent-server .env at startup
]

[project.optional-dependencies]
llm = [
    "openai>=1.40",            # Probe (native)
    "google-genai>=1.0",       # Orbit (google-adk / Gemini)
    "openai-agents>=0.0.10",   # Healthcare (openai-agents SDK)
    "google-adk>=1.0",         # DevOps (google-adk runtime)
    "litellm>=1.40",           # DevOps model backend (openai/* via Google ADK)
]
# LangChain agents (ITSM + HR). Heavier stack, so kept out of `llm` — pulled in
# alongside hexgate by `make install-hexgate` (these agents are gated anyway).
itsm = [
    "langchain-openai>=0.2",   # model backend (ChatOpenAI)
    "langchain-core>=0.3",     # tools (@tool)
    "langgraph>=0.2.46",       # HR agent (create_react_agent; `prompt=` kwarg lands in 0.2.46)
    "deepagents>=0.0.5",       # ITSM agent (create_deep_agent over LangGraph)
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]
# Opt-in HexGate wrapping (enabled by setting HEXGATE_API_KEY). Not in the default setup.sh;
# needs Python >=3.13 (the hexgate floor). Without it, the plain healthcare path
# still works.
hexgate = ["hexgate>=0.2.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]

# Ruff config is shared at the repo root (HexKit/ruff.toml).
