[project]
name = "gdocs-agent"
version = "0.1.0"
description = "HexKit backend serving a hexgate-gated Google-Docs MCP agent — policy lives on the hexgate platform; denials stream as hexgate events (framework='hexgate')"
# hexgate requires >=3.13, and hexgate.mcp pulls in the MCP client used to spawn
# the fake Google Docs server. Create this venv with a 3.13+ interpreter.
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "hexgate>=0.2.8",          # >=0.2.8 has hexgate.mcp (the MCP gate)
    "langchain-openai>=0.2",   # the chat model the agent drives
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdocs_agent"]
