[project]
name = "hexaui-proxy"
version = "0.1.0"
description = "HexaUI platform backend — single-user proxy: conversations, files, encrypted keys, and per-framework SSE translation (import package stays `platform_backend`)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "hexa-events",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.6",
]

[tool.uv.sources]
hexa-events = { path = "../packages/hexa-events", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — formatter handles this
    "B008",  # FastAPI's `Depends()` in default args is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are the point in tests
