[project]
name = "starter-agent"
version = "0.1.0"
description = "Minimal copy-me backend for the HexaUI streaming contract"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# Only needed to run demo/scripts/verify_backend.py against this backend.
dev = ["httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starter_agent"]
