[project]
name = "platform-runtime"
version = "0.1.0"
description = "Unified runtime for heterogeneous AI agent frameworks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
langchain = [
    "langchain>=1.0",
    "langchain-core>=1.0",
]
openai-agents = [
    "openai-agents>=0.17",
]
google-adk = [
    "google-adk>=1.33",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_runtime"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
